--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,5 +1,9 @@
 * {
-    margin: 0; padding: 0;
+    border: none;
+    color: #fff;
+    font-family: 'Arial';
+    margin: 0; 
+    padding: 0; 
 }
 
 body {
@@ -13,32 +17,72 @@ body {
     background-image: url(../img/gradient\ new.png);
 }
 
+.gold {
+    color: #95952D;
+}
+
+.low-info {
+    font-size: 18px;
+    position: absolute;
+    top: 484px;
+}
+
+.turn {left: 173px;}
+.turn-state {left: 230px;}
+
+.exhst {left: 715px;}
+.exhst-state {left: 782px;}
+
 .layer {
     position: absolute;
     left: 0; top: 0;
     width: 100%;
     height: 100%;
-    background-position: no-repeat;
+    background-repeat: no-repeat;
 }
 
-/* .gearbox {
-    
-} */
+.check {
+    background-image: url(../img/check.png);
+    background-position: 80px 210px;
+    background-size: 80%;
+}
 
+.park {
+    background-image: url(../img/park.png);
+    background-position: 102px 210px;
+    background-size: 80%;
+}
+
+.gearbox            {
+    background-position: 90px 93px;
+    background-size: 80%;
+}
 .gearbox.parking    {background-image: url(../img/P.png);}
 .gearbox.rear       {background-image: url(../img/R.png);}
 .gearbox.neutlral   {background-image: url(../img/N.png);}
 .gearbox.drive      {background-image: url(../img/D.png);}
 .gearbox.three      {background-image: url(../img/3.png);}
 
-.car-mode.main {
-    background-image: url(../img/car\ main.png);
+.car-mode       {
+    background-size: 66%;
+    background-position: center;
+}
+.car-mode.main  {background-image: url(../img/car\ main.png);}
+.car-mode.front {background-image: url(../img/car\ front.png);}
+.car-mode.back  {background-image: url(../img/car\ back.png);}
+
+.cross > div {
+    position: absolute;
+    left: 0; top: 0;
 }
 
-.car-mode.front {
-    background-image: url(../img/car\ front.png);
+.cross .vertical {
+    width: 50%;
+    height: 100%;
+    border-right: solid 1px #fff;
 }
-
-.car-mode.back {
-    background-image: url(../img/car\ back.png);
+.cross .horizontal {
+    width: 100%;
+    height: 50%;
+    border-bottom: solid 1px #fff;
 }
