--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -7,7 +7,37 @@
 }
 
 body {
-    background-color: #fff;
+    background-color: #000;
+}
+
+.programming {
+    color: #bbbb;
+    left: 0px;
+    top: 56px;
+    position: fixed;
+    font-size: 35px;
+    font-weight: bold;
+    width: 1023px;
+    text-align: center;
+}
+
+.programming.select .label {
+    position: absolute;
+    color: #bbbb;
+    width: 50%;
+    text-align: right;
+}
+
+.programming.select .info {
+    color: #95952D;
+    left: 50%;
+    position: absolute;
+}
+
+.programming.select {
+    color: #95952D;
+    font-size: 35px;
+    font-weight: bold;
 }
   
 .work {
@@ -15,6 +45,25 @@ body {
     width: 1024px; height: 600px;
     background-color: #000;
     background-image: url(../img/gradient\ new.png);
+}
+
+.layers {
+    position: absolute;
+    width: 1024px; height: 600px;
+    background-color: #000;
+}
+
+.layers::after{
+    position:absolute; width:0; height:0; overflow:hidden; z-index:-1; 
+    content:url(../img/Start.gif);   
+}
+
+.gif {
+    position: absolute;
+    width: 480px;
+    height: 320px;
+    top: 140px;
+    left: 272px;
 }
 
 .gold {
@@ -31,11 +80,37 @@ body {
     top: 484px;
 }
 
-.turn {left: 173px;}
-.turn-state {left: 230px;}
+.door-info {
+    color: red;
+    position: absolute;
+    font-size: 18px;
+    font-weight: bold;
+    top: 534px;
+    left: 208px;
+}
+
+.hood-info {
+    color: red;
+    position: absolute;
+    font-size: 18px;
+    font-weight: bold;
+    top: 534px;
+    left: 755px;
+}
+
+.low-info.state {
+    top: 504px;
+}
+
+.turn {left: 256px;}
+.turn-state {
+    text-align: right;
+    width: 100px;
+    left: 204px;
+}
 
 .exhst {left: 715px;}
-.exhst-state {left: 782px;}
+.exhst-state {left: 715px;}
 
 .layer {
     position: absolute;
@@ -71,9 +146,14 @@ body {
     background-size: 66%;
     background-position: center;
 }
-.car-mode.main  {background-image: url(../img/car\ main.png);}
-.car-mode.front {background-image: url(../img/car\ front.png);}
-.car-mode.back  {background-image: url(../img/car\ back.png);}
+.car-mode.main, .car-mode.programming, .car-mode.switch   {background-image: url(../img/car\ main.png);}
+.car-mode.front, .car-mode.turn-sel {background-image: url(../img/car\ front.png);}
+.car-mode.back, .car-mode.exh-sel  {background-image: url(../img/car\ back.png);}
+
+.car-mode::after{
+    position:absolute; width:0; height:0; overflow:hidden; z-index:-1; 
+    content:url(../img/car\ main.png) url(../img/car\ front.png) url(../img/car\ back.png);   
+}
 
 .cross > div {
     position: absolute;
